15-09-2018
- Research AutoBuyer ignore warps and Extreme
- Reduced Research AutoBuyer initial timeout from 900s to 600s

14-09-2018
- Disabled mastery physics
- PlayFab
- Extreme now require worlds level > 15 and current world level > 50% MAX_LEVEL instead of 90%

13-09-2018
- Added missing names and descriptions
- Team and Twin up on groups show up when the SUM of the individual team costs are available
- Lowered material required for travel
- Extreme research
- Fixed Major workers double soil production
- Fixed Time Warp Autobuyer
- Less expensive researches for buildings and engineer

12-09-2018
- Added infinite loop check
- Fixed infinite loop
- Fixed group buy prices
- Fixed no more bonus from Malus
- Fixed: Time not reset after changing world
- Changed UI headers

11-09-2018
- Fixed world not saving experience
- Fixed Student Followers/Mining confusion
- Fixed Twin rounding
- Fixed group charts not updating
- Light bulb ignore repeatable research, if quantity > max buy

10-09-2018
- Fixed loading error
- Fixed some typos

09-09-2018
- Initial release