@@ -1,0 +1,7 @@
+import { Swarm } from './swarm';
+
+describe('Swarm', () => {
+  it('should create an instance', () => {
+    expect(new Swarm()).toBeTruthy();
+  });
+});
