@@ -24,7 +24,7 @@ describe("World", () => {
     world1.level = new Decimal(10);
 
     world1.productionsAll = [[game.worldBonus.foodBonus, new Decimal(2)]];
-    world1.productionsBonus = [[game.worldBonus.woodBonus, new Decimal(3)]];
+    world1.productionsBonus = [[game.worldBonus.soilBonus, new Decimal(3)]];
     world1.productionsEfficienty = [
       [game.worldBonus.scienceBonus, new Decimal(4)]
     ];
@@ -37,7 +37,7 @@ describe("World", () => {
     expect(world2.productionsAll[0][0].id).toBe(game.worldBonus.foodBonus.id);
     expect(world2.productionsAll[0][1].toNumber()).toBe(2);
 
-    expect(world2.productionsBonus[0][0].id).toBe(game.worldBonus.woodBonus.id);
+    expect(world2.productionsBonus[0][0].id).toBe(game.worldBonus.soilBonus.id);
     expect(world2.productionsBonus[0][1].toNumber()).toBe(3);
 
     expect(world2.productionsEfficienty[0][0].id).toBe(
